syntax = "proto3";

package holms.types.folio;
option csharp_namespace = "HOLMS.Types.Folio";
option go_package = "folio";

import "money/accounting/tax_fee.proto";
import "primitive/monetary_amount.proto";

message TaxFeeAssessment {
	holms.types.money.accounting.TaxFee tax_or_fee = 1;
	holms.types.primitive.MonetaryAmount quoted_tax_fee_amount = 2;
}